# ASPQMus

./: .gitignore  .gitmodules  README.md  mus_output.txt  pyproject.toml  test.aspq
aspqmus/: __init__.py  app.py  remus.py
aspqmus/language/: QuantifiedProgram.py  __init__.py
aspqmus/rewriters/: AdornmentProgramRewriter.py  __init__.py
aspqmus/utils/: Settings.py  __init__.py
