[project]
name = "aspq-mus"
version = "0.0.1"
description = "A tool for computing ASP(Q) MUS and MCS based on PyQASP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "assumption-lattice",
    "bidict>=0.23.1",
    "clingo>=5.8.0",
    "pyqasp",
]

[project.scripts]
aspqmus = "aspqmus.app:entrypoint"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
pyqasp = { git = "https://github.com/MazzottaG/PyQASP" }
assumption-lattice = { git = "https://www.github.com/ainnoot/assumptions-lattice.git" }

